--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -18,6 +18,7 @@
     "@vtaits/react-color-picker": "^0.1.3",
     "aos": "^2.3.4",
     "apexcharts": "^3.37.1",
+    "autoprefixer": "10.4.5",
     "axios": "^0.26.0",
     "axios-mock-adapter": "^1.20.0",
     "bootstrap": "5.2.3",
@@ -49,6 +50,7 @@
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-barcode": "^1.4.6",
     "react-chartjs-2": "^2.11.1",
     "react-color": "^2.19.3",
     "react-countdown": "^2.3.5",
