progress printing registrasi pasien

--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -39,6 +39,7 @@
     "gridjs-react": "^6.0.1",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.0.1",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.3",
     "list.js": "^2.3.1",
     "lord-icon-element": "^4.0.3",
