--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -163,6 +163,9 @@
     "moment": "2.29.1",
     "autoprefixer": "10.4.5"
   },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "devDependencies": {
     "babel-plugin-prismjs": "^2.1.0"
   }
