done error surface

--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -4,10 +4,10 @@
   "description": "Node.js for JWT Authentication with Postgres",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon --experimental-specifier-resolution=node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
+  "type": "module",
   "keywords": [
     "node js",
     "jwt",
