--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -50,6 +50,12 @@
     "rules": {
       "no-undef": [
         "error"
+      ],
+      "no-const-assign": [
+        "error"
+      ],
+      "for-direction": [
+        "error"
       ]
     },
     "globals": {
