--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -28,6 +28,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "lz-string": "^1.5.0",
+    "moment-timezone": "^0.5.43",
+    "momentjs": "^2.0.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
