--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -60,7 +60,14 @@
       "for-direction": [
         "error"
       ],
-      "max-lines-per-function": ["warn", 130]
+      "max-lines-per-function": ["warn", 130],
+      "no-dupe-args": ["error"],
+      "use-isnan": ["error"],
+      "no-self-assign": ["error"],
+      "no-constant-condition": ["warn"],
+      "no-unsafe-negation": ["error"],
+      "no-unsafe-optional-chaining": ["error"]
+      
 
     },
     "globals": {}
