--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -71,6 +71,7 @@
     "react-i18next": "^12.2.0",
     "react-jvectormap": "^0.0.16",
     "react-leaflet": "^4.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
     "react-perfect-scrollbar": "^1.5.8",
     "react-quilljs": "^1.3.3",
