--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -93,6 +93,7 @@
     "@babel/eslint-parser": "^7.22.6",
     "@babel/preset-react": "^7.22.5",
     "@types/pg": "^8.10.2",
+    "@types/uuid": "^9.0.2",
     "eslint": "^8.44.0",
     "nodemon": "^2.0.22"
   }
