--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -168,6 +168,7 @@
     "autoprefixer": "10.4.5"
   },
   "devDependencies": {
+    "@types/react-flatpickr": "^3.8.8",
     "babel-plugin-prismjs": "^2.1.0"
   }
 }
