--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -92,9 +92,12 @@
     "@babel/core": "^7.22.6",
     "@babel/eslint-parser": "^7.22.6",
     "@babel/preset-react": "^7.22.5",
+    "@types/express": "^4.17.17",
     "@types/pg": "^8.10.2",
     "@types/uuid": "^9.0.2",
     "eslint": "^8.44.0",
-    "nodemon": "^2.0.22"
+    "i": "^0.3.7",
+    "nodemon": "^2.0.22",
+    "npm": "^9.8.1"
   }
 }
