--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -96,6 +96,7 @@
     "styled-components": "^5.3.6",
     "swiper": "^9.0.5",
     "web-vitals": "^3.1.1",
+    "xlsx": "^0.18.5",
     "yup": "^1.0.0"
   },
   "scripts": {
