--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -170,6 +170,7 @@
   },
   "devDependencies": {
     "@types/react-flatpickr": "^3.8.8",
+    "@types/styled-components": "^5.1.26",
     "babel-plugin-prismjs": "^2.1.0"
   }
 }
