--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -30,6 +30,7 @@
     "lz-string": "^1.5.0",
     "moment-timezone": "^0.5.43",
     "momentjs": "^2.0.0",
+    "node-schedule": "^2.1.1",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
