--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "dependencies": {
-    "prettier": "^3.0.3"
-  }
+    "dependencies": {
+        "axios": "^1.5.0",
+        "prettier": "^3.0.3"
+    },
+    "devDependencies": {
+        "@types/ckeditor": "^4.9.10",
+        "install": "^0.13.0"
+    }
 }
