--- a/kios-k/package.json
+++ b/kios-k/package.json
@@ -32,7 +32,7 @@
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "concurrently \"npm run start-react\" \"npm run start-electron\"",
+    "start": "concurrently \"npm run start-react\"",
     "start-react": "cross-env PORT=3002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
