--- a/kios-k/package.json
+++ b/kios-k/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.3.1",
     "electron": "^26.2.0",
     "formik": "^2.4.4",
+    "jspdf": "^2.5.1",
+    "pdf-to-printer": "^5.6.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.8.0",
