--- a/daftarmandiri/.vscode/settings.json
+++ b/daftarmandiri/.vscode/settings.json
@@ -6,7 +6,6 @@
         "../frontendjs": true
     },
     "files.exclude": {
-        "**/public": true,
-        "**/frontendjs": true
+        "frontendjs": true
     }
 }
