--- a/kios-k/package.json
+++ b/kios-k/package.json
@@ -7,6 +7,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@node-escpos/adapter": "^0.0.1",
+    "@node-escpos/core": "^0.4.0",
+    "@node-escpos/usb-adapter": "^0.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
