--- a/daftarmandiri/.vscode/settings.json
+++ b/daftarmandiri/.vscode/settings.json
@@ -6,6 +6,6 @@
         "../frontendjs": true
     },
     "files.exclude": {
-        "frontendjs": true
+        "**/frontendjs/**": true
     }
 }
