--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -47,6 +47,7 @@
         "moment": "^2.29.4",
         "node-sass": "^8.0.0",
         "nouislider-react": "^3.4.1",
+        "prettier": "^3.0.3",
         "prismjs": "^1.29.0",
         "quill": "^1.3.7",
         "react": "^18.2.0",
