--- a/kios-k/package.json
+++ b/kios-k/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
     "electron": "^26.2.0",
+    "electron-packager": "^17.1.2",
     "formik": "^2.4.4",
     "jspdf": "^2.5.1",
     "pdf-to-printer": "^5.6.0",
@@ -43,7 +44,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-electron": "electron ."
+    "start-electron": "electron .",
+    "package-win":"electron-packager . --overwrite --platform-win32 --arch=x64 --icon=src/assets/images/snb256.ico --prune=true --out=release-builds"
   },
   "eslintConfig": {
     "extends": [
