--- a/daftarmandiri/package.json
+++ b/daftarmandiri/package.json
@@ -16,8 +16,10 @@
         "rc-progress": "^3.5.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-flatpickr": "^3.10.13",
         "react-redux": "^8.1.2",
         "react-scripts": "5.0.1",
+        "react-select": "^5.7.5",
         "react-toastify": "^9.1.3",
         "reactstrap": "^9.2.0",
         "redux": "^4.2.1",
