--- a/daftarmandiri/package.json
+++ b/daftarmandiri/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^18.2.0",
         "react-flatpickr": "^3.10.13",
         "react-redux": "^8.1.2",
+        "react-responsive-carousel": "^3.2.23",
         "react-scripts": "5.0.1",
         "react-select": "^5.7.5",
         "react-toastify": "^9.1.3",
