--- a/daftarmandiri/package.json
+++ b/daftarmandiri/package.json
@@ -17,6 +17,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-flatpickr": "^3.10.13",
+        "react-loader-spinner": "^5.4.5",
         "react-redux": "^8.1.2",
         "react-responsive-carousel": "^3.2.23",
         "react-scripts": "5.0.1",
