--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -33,6 +33,7 @@
         "filepond-plugin-image-exif-orientation": "^1.0.11",
         "filepond-plugin-image-preview": "^4.6.11",
         "firebase": "^9.17.1",
+        "form-data": "^4.0.0",
         "formik": "^2.2.9",
         "google-maps-react": "^2.0.6",
         "gridjs": "^6.0.6",
