--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -36,6 +36,7 @@
     "pg-hstore": "^2.3.4",
     "prettier": "^3.0.3",
     "sequelize": "^6.31.1",
+    "svg-captcha": "^1.4.0",
     "uuid": "^9.0.0"
   },
   "eslintConfig": {
