--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -26,6 +26,7 @@
     "cryptojs": "^2.5.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs-backwards-stream": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "lz-string": "^1.5.0",
     "moment-timezone": "^0.5.43",
