--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -1,108 +1,111 @@
 {
-  "name": "js-jwt-auth-postgresql",
-  "version": "1.0.0",
-  "description": "Node.js for JWT Authentication with Postgres",
-  "main": "server.js",
-  "scripts": {
-    "start": "nodemon --exec \"npx eslint . && node --experimental-specifier-resolution=node  server.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "type": "module",
-  "keywords": [
-    "node js",
-    "jwt",
-    "authentication",
-    "express",
-    "postgresql"
-  ],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.4.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "cryptojs": "^2.5.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "fs-backwards-stream": "^1.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "lz-string": "^1.5.0",
-    "moment-timezone": "^0.5.43",
-    "momentjs": "^2.0.0",
-    "multer": "^1.4.5-lts.1",
-    "node-schedule": "^2.1.1",
-    "pg": "^8.10.0",
-    "pg-hstore": "^2.3.4",
-    "prettier": "^3.0.3",
-    "sequelize": "^6.31.1",
-    "svg-captcha": "^1.4.0",
-    "uuid": "^9.0.0"
-  },
-  "eslintConfig": {
-    "extends": [],
-    "env": {
-      "es6": true,
-      "node": true
+    "name": "js-jwt-auth-postgresql",
+    "version": "1.0.0",
+    "description": "Node.js for JWT Authentication with Postgres",
+    "main": "server.js",
+    "scripts": {
+        "start": "nodemon --exec \"npx eslint . && node --experimental-specifier-resolution=node  server.js\"",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "parser": "@babel/eslint-parser",
-    "parserOptions": {
-      "requireConfigFile": false,
-      "ecmaVersion": 2020,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
+    "type": "module",
+    "keywords": [
+        "node js",
+        "jwt",
+        "authentication",
+        "express",
+        "postgresql"
+    ],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^1.4.0",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
+        "cryptojs": "^2.5.3",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "fs-backwards-stream": "^1.0.0",
+        "jsonwebtoken": "^9.0.0",
+        "lz-string": "^1.5.0",
+        "moment-timezone": "^0.5.43",
+        "momentjs": "^2.0.0",
+        "multer": "^1.4.5-lts.1",
+        "node-schedule": "^2.1.1",
+        "pg": "^8.10.0",
+        "pg-hstore": "^2.3.4",
+        "prettier": "^3.0.3",
+        "sequelize": "^6.31.1",
+        "svg-captcha": "^1.4.0",
+        "uuid": "^9.0.0"
     },
-    "rules": {
-      "no-undef": [
-        "error"
-      ],
-      "no-const-assign": [
-        "error"
-      ],
-      "for-direction": [
-        "error"
-      ],
-      "max-lines-per-function": [
-        "warn",
-        130
-      ],
-      "no-dupe-args": [
-        "error"
-      ],
-      "use-isnan": [
-        "error"
-      ],
-      "no-self-assign": [
-        "error"
-      ],
-      "no-constant-condition": [
-        "warn"
-      ],
-      "no-unsafe-negation": [
-        "error"
-      ],
-      "no-unsafe-optional-chaining": [
-        "error"
-      ],
-      "no-sparse-arrays": [
-        "warn"
-      ]
+    "eslintConfig": {
+        "extends": [],
+        "env": {
+            "es6": true,
+            "node": true
+        },
+        "parser": "@babel/eslint-parser",
+        "parserOptions": {
+            "requireConfigFile": false,
+            "ecmaVersion": 2020,
+            "sourceType": "module",
+            "ecmaFeatures": {
+                "jsx": true
+            }
+        },
+        "rules": {
+            "no-undef": [
+                "error"
+            ],
+            "no-const-assign": [
+                "error"
+            ],
+            "for-direction": [
+                "error"
+            ],
+            "max-lines-per-function": [
+                "warn",
+                130
+            ],
+            "no-dupe-args": [
+                "error"
+            ],
+            "use-isnan": [
+                "error"
+            ],
+            "no-self-assign": [
+                "error"
+            ],
+            "no-constant-condition": [
+                "warn"
+            ],
+            "no-unsafe-negation": [
+                "error"
+            ],
+            "no-unsafe-optional-chaining": [
+                "error"
+            ],
+            "no-sparse-arrays": [
+                "warn"
+            ],
+            "no-duplicate-case": [
+                "warn"
+            ]
+        },
+        "globals": {}
     },
-    "globals": {}
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.6",
-    "@babel/eslint-parser": "^7.22.6",
-    "@babel/preset-react": "^7.22.5",
-    "@types/express": "^4.17.17",
-    "@types/pg": "^8.10.2",
-    "@types/uuid": "^9.0.2",
-    "eslint": "^8.44.0",
-    "i": "^0.3.7",
-    "nodemon": "^2.0.22",
-    "npm": "^9.8.1"
-  }
+    "devDependencies": {
+        "@babel/core": "^7.22.6",
+        "@babel/eslint-parser": "^7.22.6",
+        "@babel/preset-react": "^7.22.5",
+        "@types/express": "^4.17.17",
+        "@types/pg": "^8.10.2",
+        "@types/uuid": "^9.0.2",
+        "eslint": "^8.44.0",
+        "i": "^0.3.7",
+        "nodemon": "^2.0.22",
+        "npm": "^9.8.1"
+    }
 }
