--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -37,6 +37,7 @@
         "pg-hstore": "^2.3.4",
         "prettier": "^3.0.3",
         "sequelize": "^6.31.1",
+        "sequelize-auto": "^0.8.8",
         "svg-captcha": "^1.4.0",
         "uuid": "^9.0.0"
     },
