--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -41,7 +41,7 @@
         "i18next": "^22.4.10",
         "i18next-browser-languagedetector": "^7.0.1",
         "jspdf": "^2.5.1",
-        "leaflet": "^1.9.3",
+        "leaflet": "^1.9.4",
         "list.js": "^2.3.1",
         "lord-icon-element": "^4.0.3",
         "lottie-web": "^5.10.2",
@@ -73,6 +73,9 @@
         "react-i18next": "^12.2.0",
         "react-jvectormap": "^0.0.16",
         "react-leaflet": "^4.2.0",
+        "react-leaflet-cluster": "^2.1.0",
+        "react-leaflet-heatmap-layer": "^2.0.0",
+        "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
         "react-loader-spinner": "^5.3.4",
         "react-masonry-css": "^1.0.16",
         "react-perfect-scrollbar": "^1.5.8",
