--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -15,6 +15,8 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
+        "@turf/boolean-point-in-polygon": "^6.5.0",
+        "@turf/turf": "^6.5.0",
         "@vtaits/react-color-picker": "^0.1.3",
         "aos": "^2.3.4",
         "apexcharts": "^3.37.1",
@@ -100,6 +102,7 @@
         "simplebar-react": "^3.2.1",
         "styled-components": "^5.3.6",
         "swiper": "^9.0.5",
+        "turf": "^3.0.14",
         "web-vitals": "^3.1.1",
         "xlsx": "^0.18.5",
         "yup": "^1.0.0"
