--- a/tracer/package.json
+++ b/tracer/package.json
@@ -5,7 +5,8 @@
     "main": "main.js",
     "scripts": {
         "start": "electron --trace-warnings .",
-        "test": "run service tracer"
+        "test": "run service tracer",
+        "build": "electron-packager ./ tracer --platform=win32 --arch=x64"
     },
     "author": "snb",
     "license": "ISC",
