--- a/backendjs/package.json
+++ b/backendjs/package.json
@@ -33,6 +33,7 @@
         "momentjs": "^2.0.0",
         "multer": "^1.4.5-lts.1",
         "node-schedule": "^2.1.1",
+        "nodemailer": "^6.9.7",
         "pg": "^8.10.0",
         "pg-hstore": "^2.3.4",
         "prettier": "^3.0.3",
