--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -11,6 +11,7 @@
         "@fullcalendar/interaction": "^6.1.4",
         "@fullcalendar/list": "^6.1.4",
         "@fullcalendar/react": "^6.1.4",
+        "@reduxjs/toolkit": "^2.0.1",
         "@simonwep/pickr": "^1.8.2",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
