--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "modern-velzon-react",
+    "name": "frontendjs",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
