--- a/sharedjs/package.json
+++ b/sharedjs/package.json
@@ -1,13 +1,8 @@
 {
-    "name": "backendjs",
+    "name": "sharedjs",
     "version": "1.0.0",
     "description": "Node.js for JWT Authentication with Postgres",
     "main": "server.js",
-    "scripts": {
-        "start": "nodemon --exec \"npx eslint . && node --experimental-specifier-resolution=node  server.js\"",
-        "deploy": "node --experimental-specifier-resolution=node  server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
     "type": "module",
     "keywords": [
         "node js",
@@ -18,46 +13,21 @@
     ],
     "author": "",
     "license": "ISC",
-    "dependencies": {
-        "axios": "^1.4.0",
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.20.2",
-        "cors": "^2.8.5",
-        "crypto-js": "^4.1.1",
-        "cryptojs": "^2.5.3",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "fs-backwards-stream": "^1.0.0",
-        "jsonwebtoken": "^9.0.0",
-        "lz-string": "^1.5.0",
-        "moment-timezone": "^0.5.43",
-        "momentjs": "^2.0.0",
-        "multer": "^1.4.5-lts.1",
-        "node-schedule": "^2.1.1",
-        "nodemailer": "^6.9.7",
-        "pg": "^8.10.0",
-        "pg-hstore": "^2.3.4",
-        "prettier": "^3.0.3",
-        "sequelize": "^6.31.1",
-        "sequelize-auto": "^0.8.8",
-        "sharedjs": "file:../sharedjs",
-        "svg-captcha": "^1.4.0",
-        "uuid": "^9.0.0"
-    },
     "eslintConfig": {
         "extends": [],
         "env": {
             "es6": true,
             "node": true
         },
-        "parser": "@babel/eslint-parser",
+        "parser": "@typescript-eslint/parser",
         "parserOptions": {
             "requireConfigFile": false,
             "ecmaVersion": 2020,
             "sourceType": "module",
             "ecmaFeatures": {
                 "jsx": true
-            }
+            },
+            "project": "./tsconfig.json"
         },
         "rules": {
             "no-undef": [
@@ -96,20 +66,20 @@
             ],
             "no-duplicate-case": [
                 "warn"
-            ]
+            ],
+            "@typescript-eslint/no-floating-promises": 1
         },
-        "globals": {}
+        "globals": {},
+        "plugins": [
+            "@typescript-eslint"
+        ]
     },
     "devDependencies": {
-        "@babel/core": "^7.22.6",
-        "@babel/eslint-parser": "^7.22.6",
-        "@babel/preset-react": "^7.22.5",
-        "@types/express": "^4.17.17",
-        "@types/pg": "^8.10.2",
-        "@types/uuid": "^9.0.2",
-        "eslint": "^8.44.0",
+        "eslint": "^8.57.0",
         "i": "^0.3.7",
         "nodemon": "^2.0.22",
-        "npm": "^9.8.1"
+        "npm": "^9.8.1",
+        "typescript": "^5.3.3",
+        "typescript-eslint": "^7.0.1"
     }
 }
