--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -44,6 +44,7 @@
         "i18next": "^22.4.10",
         "i18next-browser-languagedetector": "^7.0.1",
         "jspdf": "^2.5.1",
+        "leader-line": "^1.0.7",
         "leaflet": "^1.9.4",
         "list.js": "^2.3.1",
         "lord-icon-element": "^4.0.3",
