--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_BASE_API_URL=https://compro.healthtechs.id:8080/
+# NEXT_PUBLIC_BASE_API_URL=https://compro.healthtechs.id:8080/
+# NEXT_PUBLIC_BASE_API_URL=http://localhost:2000
