--- a/sharedjs/package.json
+++ b/sharedjs/package.json
@@ -81,5 +81,8 @@
         "npm": "^9.8.1",
         "typescript": "^5.3.3",
         "typescript-eslint": "^7.0.1"
+    },
+    "dependencies": {
+        "yup": "^1.4.0"
     }
 }
