--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -55,6 +55,7 @@
         "nouislider-react": "^3.4.1",
         "prettier": "^3.0.3",
         "prismjs": "^1.29.0",
+        "pure-react-carousel": "^1.30.1",
         "quill": "^1.3.7",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
