--- a/daftarmandiri/package.json
+++ b/daftarmandiri/package.json
@@ -7,11 +7,13 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.5.0",
+        "backendjs": "file:../backendjs",
         "bootstrap": "^5.3.2",
         "cipher-base": "^1.0.4",
         "crypto-js": "^4.1.1",
         "cryptojs": "^2.5.3",
         "formik": "^2.4.5",
+        "frontendjs": "file:../frontendjs",
         "prettier": "^3.0.3",
         "rc-progress": "^3.5.1",
         "react": "^18.2.0",
