--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -27,6 +27,7 @@
         "bootstrap": "5.2.3",
         "chart.js": "^2.9.4",
         "cleave.js": "^1.6.0",
+        "crypto-js": "^4.2.0",
         "echarts": "^5.4.1",
         "echarts-for-react": "^3.0.2",
         "emoji-picker-react": "^4.4.7",
