--- a/frontendjs/package.json
+++ b/frontendjs/package.json
@@ -39,7 +39,6 @@
         "firebase": "^9.17.1",
         "form-data": "^4.0.0",
         "formik": "^2.2.9",
-        "google-maps-react": "^2.0.6",
         "gridjs": "^6.0.6",
         "gridjs-react": "^6.0.1",
         "i18next": "^22.4.10",
@@ -99,6 +98,7 @@
         "react-switch": "^7.0.0",
         "react-table": "^7.8.0",
         "react-toastify": "^9.1.1",
+        "react-webcam": "^7.2.0",
         "reactstrap": "^9.1.6",
         "redux": "^4.2.1",
         "redux-saga": "^1.2.2",
@@ -187,6 +187,7 @@
     "devDependencies": {
         "@types/react-flatpickr": "^3.8.8",
         "@types/styled-components": "^5.1.26",
+        "ajv": "^8.16.0",
         "babel-plugin-prismjs": "^2.1.0"
     }
 }
