done face recog

--- a/frontendjs/.env.example
+++ b/frontendjs/.env.example
@@ -1,7 +1,10 @@
+API_USER='postgres'
 PUBLIC_URL=
 # REACT_APP_API_URL="https://api-node.themesbrand.website"
-REACT_APP_API_URL="http://localhost:8085/api"
-
+REACT_APP_API_URL="http://localhost:8086/api"
+REACT_APP_MEDIA_URL="http://localhost:8086/media"
+REACT_APP_SOCKET_URL="http://localhost:8086"
+REACT_APP_MEDIA_UPLOAD_URL="http://localhost:8086/media/upload"
 REACT_APP_DEFAULTAUTH=api
 
 REACT_APP_API_KEY=
@@ -13,3 +16,4 @@ REACT_APP_MESSAGINGSENDERID=
 REACT_APP_APPID=
 REACT_APP_MEASUREMENTID=
 GENERATE_SOURCEMAP=false
+PORT=3000
