--- a/backendjs/.env.example
+++ b/backendjs/.env.example
@@ -10,4 +10,5 @@ API_IV_LENGTH="16"
 API_ENC_ALGORITHM="aes-256-ctr"
 API_SMTP_SERVER="dev.snberdikari.co.id:25"
 APP_FE_URL="http://localhost:3000"
+APP_FR_URL="http://localhost:13000"
 ACTIVATION_KEY="fsdfsdaewqtkfdskjdsfawetqtpu23i15"
